Fix cut text FAQs on mobile
Fix cut text FAQs on mobile

--- a/stylesheets/_faq.scss
+++ b/stylesheets/_faq.scss
@@ -23,7 +23,7 @@
     }
 
     .open__faq__box {
-        max-height: 300px !important;
+        max-height: 600px !important;
         background-color: $blue !important;
         transition: max-height 1s;
         margin: 10px 0px 20px;
